[gd_scene load_steps=17 format=4 uid="uid://lfi7eb32t737"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_kp0ka"]
[ext_resource type="Texture2D" uid="uid://dtfrnacqpnmnm" path="res://art/background/salad_forest/salad_forest_back.png" id="2_dm86h"]
[ext_resource type="Texture2D" uid="uid://bxd6iqq06g42" path="res://art/background/salad_forest/salad_forest_3.png" id="3_hieur"]
[ext_resource type="Texture2D" uid="uid://bjkqfopytsy63" path="res://art/background/salad_forest/salad_forest_2.png" id="4_8ne32"]
[ext_resource type="Texture2D" uid="uid://chf6xgx4u6mtw" path="res://art/background/salad_forest/salad_forest_1.png" id="5_t7rig"]
[ext_resource type="Script" path="res://scenes/water.gd" id="6_ryvf5"]
[ext_resource type="Texture2D" uid="uid://cvm3sqgfd8lfx" path="res://art/background/salad_forest/salad_forest_dressing.png" id="7_s6ga0"]
[ext_resource type="Texture2D" uid="uid://d06yd0m7chbgk" path="res://art/background/salad_forest/salad_forest_water_overlay.png" id="8_80nfu"]
[ext_resource type="PackedScene" uid="uid://nbmu66d44rym" path="res://scenes/food_tick.tscn" id="9_en2tt"]
[ext_resource type="AudioStream" uid="uid://6ek1kgrcnlv8" path="res://audio/music/Pipe Forest.ogg" id="10_tru6r"]
[ext_resource type="AudioStream" uid="uid://bjpslk5up5pu0" path="res://audio/ambience/Birds1.mp3" id="11_d76ck"]
[ext_resource type="PackedScene" uid="uid://cicg2gvjr6355" path="res://scenes/OverlayMenus.tscn" id="12_mcbed"]
[ext_resource type="Texture2D" uid="uid://7ey3rma8nudf" path="res://art/tilesets/sushi_garden.png" id="13_o1kk1"]
[ext_resource type="PackedScene" uid="uid://f18wj7lkglud" path="res://player/chicken.tscn" id="14_c7xwv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yab6f"]
resource_name = "Sushi Garden"
texture = ExtResource("13_o1kk1")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
3:0/0 = 0
3:0/0/custom_data_0 = true
4:0/0 = 0
4:0/0/custom_data_0 = true
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, 10, 12, 10, 12, 12, 10, 12)
6:0/0 = 0
6:0/0/custom_data_0 = true
6:0/0/custom_data_1 = true
7:0/0 = 0
7:0/0/custom_data_0 = true
7:0/0/custom_data_1 = true
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 10, -10, 10, -10, 12, -12, 12)
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/custom_data_0 = true
1:1/0/custom_data_1 = true
2:1/0 = 0
2:1/0/custom_data_0 = true
3:1/0 = 0
3:1/0/custom_data_0 = true
4:1/0 = 0
4:1/0/custom_data_0 = true
5:1/next_alternative_id = 2
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, -12, 12, -12, 12, 12, 10, 12)
5:1/1 = 1
6:1/0 = 0
6:1/0/custom_data_0 = true
6:1/0/custom_data_1 = true
7:1/0 = 0
7:1/0/custom_data_0 = true
7:1/0/custom_data_1 = true
8:1/next_alternative_id = 2
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, -10, -12, -10, 12, -12, 12)
8:1/1 = 1
0:2/0 = 0
0:2/0/custom_data_0 = true
1:2/0 = 0
1:2/0/custom_data_0 = true
2:2/0 = 0
2:2/0/custom_data_0 = true
3:2/0 = 0
3:2/0/custom_data_0 = true
4:2/0 = 0
4:2/0/custom_data_0 = true
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, -12, 12, -12, 12, -10, 10, -10)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, -8, -12, -10)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, -10, -12, -8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, -10, -12, -10, -10, -12, -10)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/next_alternative_id = 2
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 10, 12, 10, 12, 12, -12, 12)
7:3/1 = 1
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, -10, -12, -10)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
7:4/0 = 0
7:4/0/custom_data_0 = true
7:4/0/custom_data_1 = true
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
6:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
17:6/0 = 0

[sub_resource type="TileSet" id="TileSet_r2sof"]
tile_size = Vector2i(24, 24)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "spawnable"
custom_data_layer_1/type = 1
sources/2 = SubResource("TileSetAtlasSource_yab6f")

[node name="Map" type="Node2D"]
script = ExtResource("1_kp0ka")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.05)
motion_offset = Vector2(0, 30)
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BG"]
texture = ExtResource("2_dm86h")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.1)
motion_offset = Vector2(0, 50)
motion_mirroring = Vector2(416, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("3_hieur")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.45, 0.2)
motion_offset = Vector2(0, 50)
motion_mirroring = Vector2(416, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("4_8ne32")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.3)
motion_offset = Vector2(0, 50)
motion_mirroring = Vector2(416, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("5_t7rig")
centered = false

[node name="Water" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.05)
motion_offset = Vector2(0, 15)
motion_mirroring = Vector2(462, 0)
script = ExtResource("6_ryvf5")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Water"]
self_modulate = Color(1, 1, 1, 0.705882)
texture = ExtResource("7_s6ga0")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Water"]
texture = ExtResource("8_80nfu")
centered = false

[node name="FoodTick" parent="." instance=ExtResource("9_en2tt")]

[node name="MAP_SFX" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"Sounds"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_tru6r")
volume_db = -10.0
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_d76ck")
autoplay = true
bus = &"Ambience"

[node name="CanvasLayer" parent="." instance=ExtResource("12_mcbed")]

[node name="Ground" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAYAAwAAgAGAAEAAAAXAA0AAgAGAAEAAAAXAAwAAgAGAAAAAAAWAAwAAgAHAAAAAAAVAAwAAgAGAAAAAAAVAA0AAgAGAAEAAAAWAA0AAgAGAAAAAAAWAAoAAgAGAAEAAAAYAAoAAgAGAAEAAAAXAAoAAgAGAAAAAAAWAAsAAgAGAAAAAAAYAAsAAgAHAAEAAAAXAAsAAgAGAAEAAAAVAA4AAgAAAAMAAAAVAA8AAgAAAAQAAAAWAA4AAgABAAMAAAAWAA8AAgABAAQAAAAXAA8AAgACAAQAAAAVABAAAgAAAAUAAAAVABEAAgAAAAYAAAAWABAAAgABAAUAAAAWABEAAgABAAYAAAAXABAAAgACAAUAAAAXABEAAgACAAYAAAAYAA0AAgACAAMAAAAYAA4AAgACAAQAAAAYAA8AAgACAAUAAAAYABAAAgACAAYAAAAOAA8AAgABAAEAAAAPAA8AAgAHAAQAAAAQAA8AAgABAAEAAAARAA8AAgAGAAEAAAASAA8AAgAGAAAAAAATAA8AAgAGAAEAAAATAA4AAgAGAAAAAAATAA0AAgAGAAEAAAAOAA0AAgAGAAAAAAAOAA4AAgAHAAQAAAAPAA4AAgABAAEAAAAPAA0AAgAGAAEAAAAQAA0AAgAHAAEAAAARAA0AAgAGAAEAAAARAA4AAgAGAAAAAAAQAA4AAgAHAAQAAAASAA0AAgAGAAAAAAASAA4AAgAHAAAAAAANAA4AAgAGAAAAAAAMAA4AAgAGAAEAAAALAA4AAgAHAAEAAAAKAA4AAgAGAAEAAAAJAA4AAgAGAAAAAAAIAA4AAgAGAAEAAAAHAA4AAgAGAAAAAAAGAA4AAgAGAAEAAAAGAA0AAgAHAAEAAAAHAA0AAgAGAAEAAAAIAA0AAgAHAAEAAAAJAA0AAgAGAAEAAAAKAA0AAgAGAAAAAAALAA0AAgAGAAEAAAAMAA0AAgAGAAAAAAANAA0AAgAGAAEAAAAFAA0AAgAGAAEAAAAEAA0AAgAGAAAAAAADAA0AAgAGAAEAAAACAA0AAgAGAAAAAAABAA0AAgAGAAEAAAAAAA0AAgAHAAEAAAAAAA4AAgAGAAEAAAABAA4AAgAGAAAAAAACAA4AAgAGAAEAAAADAA4AAgABAAEAAAAEAA4AAgAHAAQAAAAFAA4AAgABAAEAAAAFAA8AAgAHAAQAAAAEAA8AAgABAAEAAAADAA8AAgAHAAQAAAACAA8AAgAHAAEAAAABAA8AAgAGAAEAAAAAAA8AAgAGAAAAAAARABAAAgAHAAEAAAAQABAAAgAGAAEAAAAPABAAAgAGAAAAAAAOABAAAgAGAAEAAAANAA8AAgAGAAEAAAAMAA8AAgAGAAAAAAALAA8AAgAGAAEAAAAKAA8AAgAGAAAAAAAJAA8AAgAHAAAAAAAIAA8AAgAGAAAAAAAHAA8AAgAGAAEAAAAGAA8AAgAHAAEAAAAFABAAAgAGAAAAAAAEABAAAgAHAAAAAAADABAAAgAGAAAAAAACABAAAgAGAAEAAAAAABEAAgAAAAQAAAAFABEAAgAFAAMAAAAFABIAAgABAAQAAAABABEAAgABAAQAAAACABEAAgADAAMAAAACABIAAgAAAAQAAAADABEAAgAEAAMAAAADABIAAgABAAQAAAAEABEAAgABAAMAAAAEABIAAgABAAQAAAARABEAAgAGAAMAAAARABIAAgACAAQAAAAPABEAAgABAAMAAAAPABIAAgABAAQAAAAQABEAAgAFAAMAAAAQABIAAgABAAQAAAAOABEAAgAEAAMAAAAOABIAAgABAAQAAAAGABAAAgAGAAEAAAAGABEAAgAGAAMAAAAGABIAAgACAAQAAAANABAAAgAHAAEAAAANABEAAgADAAMAAAANABIAAgAAAAQAAAAHABAAAgAFAAMAAAAHABEAAgABAAQAAAAIABAAAgAEAAMAAAAIABEAAgABAAQAAAAJABAAAgAFAAMAAAAJABEAAgABAAQAAAAKABAAAgAEAAMAAAAKABEAAgABAAQAAAALABAAAgAFAAMAAAALABEAAgABAAQAAAAMABAAAgAEAAMAAAAMABEAAgABAAQAAAAAABAAAgADAAMAAAABABAAAgAEAAMAAAATABAAAgAGAAMAAAATABEAAgABAAQAAAASABAAAgAFAAMAAAASABEAAgABAAQAAAAXAA4AAgACAAMAAAD8/wwAAgAAAAIAAAD8/w0AAgAAAAMAAAD9/wwAAgACAAIAAAD9/w0AAgACAAMAAAD8/wsAAgADAAIAAAD9/wsAAgAEAAIAAAD6/xAAAgADAAIAAAD6/xEAAgAAAAIAAAD6/xIAAgAAAAMAAAD6/xMAAgAAAAQAAAD7/xAAAgAEAAIAAAD7/xEAAgACAAIAAAD7/xIAAgACAAMAAAD7/xMAAgACAAQAAAD4/wsAAgACAAIAAAD1/wsAAgAAAAIAAAD2/wsAAgABAAIAAAD3/wsAAgABAAIAAAD1/woAAgADAAIAAAD4/woAAgACAAAAAAD2/woAAgABAAAAAAD3/woAAgABAAAAAAD4/wgAAgAAAAIAAAD5/wgAAgACAAIAAAD4/wcAAgADAAIAAAD5/wcAAgAEAAIAAAD4/wkAAgAAAAMAAAD5/wkAAgACAAMAAAD5/woAAgACAAQAAAD4/wwAAgAGAAMAAAD4/w0AAgACAAQAAAD1/wwAAgADAAMAAAD1/w0AAgAAAAQAAAD2/wwAAgAEAAMAAAD2/w0AAgABAAQAAAD3/wwAAgAFAAMAAAD3/w0AAgABAAQAAADt/xEAAgAAAAMAAADt/xIAAgAAAAQAAADu/xEAAgABAAMAAADu/xIAAgABAAQAAADw/xEAAgABAAMAAADw/xIAAgABAAQAAADx/xEAAgACAAMAAADx/xIAAgACAAQAAADv/xEAAgABAAMAAADv/xIAAgABAAQAAAD9/w4AAgACAAQAAAD8/w4AAgAAAAQAAAAKAAwAAgAGAAEAAAAOAAwAAgAGAAEAAAALAAwAAgAGAAAAAAAMAAwAAgAHAAAAAAANAAwAAgAGAAAAAAAMAAoAAgAAAAQAAAAMAAkAAgAAAAMAAAASAAoAAgAGAAMAAAASAAsAAgACAAQAAAAPAAoAAgADAAMAAAAPAAsAAgAAAAQAAAANAAkAAgABAAMAAAANAAoAAgABAAQAAAAOAAkAAgABAAMAAAAOAAoAAgABAAQAAAAQAAoAAgAEAAMAAAARAAoAAgAFAAMAAAAQAAsAAgABAAQAAAARAAsAAgABAAQAAAAPAAkAAgAAAAIAAAASAAkAAgACAAIAAAAQAAkAAgABAAIAAAARAAkAAgABAAIAAAAPAAcAAgAEAAQAAAASAAcAAgACAAAAAAARAAcAAgABAAAAAAAQAAcAAgADAAEAAAAPAAgAAgAEAAAAAAASAAgAAgACAAEAAAAQAAgAAgAEAAQAAAARAAgAAgAEAAQAAAAOAAgAAgABAAIAAAAMAAgAAgAAAAIAAAAMAAYAAgAAAAAAAAAOAAYAAgABAAAAAAANAAYAAgABAAAAAAANAAgAAgABAAIAAAAOAAcAAgAEAAQAAAAMAAcAAgAAAAEAAAANAAcAAgAEAAQAAAAPAAYAAgABAAAAAAAQAAYAAgACAAAAAAD//w0AAgAFAAEAAAD//w8AAgAFAAEAAAAUAA0AAgAIAAEAAAAUAA4AAgAIAAEAAAAUAA8AAgAIAAEAAAAAAAwAAgAHAAMAAAABAAwAAgAHAAMAAAACAAwAAgAHAAMAAAADAAwAAgAHAAMAAAAEAAwAAgAHAAMAAAAGAAwAAgAHAAMAAAAHAAwAAgAHAAMAAAAIAAwAAgAHAAMAAAAJAAwAAgAFAAEAAAAKAAsAAgAHAAMAAAALAAsAAgAHAAMAAAATAAwAAgAHAAMAAAAUAAwAAgAIAAAAAAAJAAsAAgAFAAAAAAD//wwAAgAFAAAAAADw/w8AAgAGAAAAAADx/xAAAgAGAAAAAADx/w4AAgAGAAAAAADx/wwAAgAGAAAAAADw/w0AAgAGAAAAAADv/wwAAgAGAAAAAADv/w4AAgAGAAAAAADv/xAAAgAGAAAAAADu/w8AAgAGAAAAAADu/w0AAgAHAAEAAADt/wwAAgAGAAAAAADt/w4AAgAGAAAAAADt/xAAAgAHAAEAAADu/xAAAgAGAAEAAADt/w8AAgAGAAEAAADt/w0AAgAGAAEAAADu/w4AAgAGAAEAAADu/wwAAgAGAAEAAADv/w0AAgAGAAEAAADw/wwAAgAHAAAAAADx/w0AAgAGAAEAAADw/w4AAgAGAAEAAADx/w8AAgAGAAEAAADw/xAAAgAGAAEAAADv/w8AAgAHAAAAAADy/xEAAgAIAAIAAADs/xEAAgAFAAIAAADs/xAAAgAFAAEAAADs/w8AAgAFAAEAAADs/w4AAgAFAAEAAADs/w0AAgAFAAEAAADs/wwAAgAFAAEAAADy/xAAAgAIAAEAAADy/w8AAgAIAAEAAADy/w0AAgAIAAEAAADy/wwAAgAIAAEAAADs/wsAAgAFAAAAAADt/wsAAgAHAAMAAADu/wsAAgAHAAMAAADv/wsAAgAHAAMAAADw/wsAAgAHAAMAAADx/wsAAgAHAAMAAADy/wsAAgAIAAAAAAD//w4AAgAFAAEAAQDy/w4AAgAIAAEAAQAMAAsAAgAAAAUAAAANAAsAAgABAAUAAAAOAAsAAgABAAUAAAAPAAwAAgAAAAUAAAASAAwAAgACAAUAAAAQAAwAAgABAAUAAAARAAwAAgABAAUAAAATABIAAgACAAUAAAARABMAAgACAAUAAAAGABMAAgACAAUAAAACABMAAgAAAAUAAAAAABIAAgAAAAUAAAANABMAAgAAAAUAAAAHABIAAgABAAUAAAAIABIAAgABAAUAAAAJABIAAgABAAUAAAAKABIAAgABAAUAAAALABIAAgABAAUAAAAMABIAAgABAAUAAAAFABMAAgABAAUAAAAEABMAAgABAAUAAAADABMAAgABAAUAAAABABIAAgABAAUAAAAOABMAAgABAAUAAAAPABMAAgABAAUAAAAQABMAAgABAAUAAAASABIAAgABAAUAAAATABMAAgACAAYAAAARABQAAgACAAYAAAANABQAAgAAAAYAAAACABQAAgAAAAYAAAAGABQAAgACAAYAAAAAABMAAgAAAAYAAAABABMAAgABAAYAAAADABQAAgABAAYAAAAEABQAAgABAAYAAAAFABQAAgABAAYAAAAHABMAAgABAAYAAAAIABMAAgABAAYAAAAJABMAAgABAAYAAAAKABMAAgABAAYAAAALABMAAgABAAYAAAAMABMAAgABAAYAAAAOABQAAgABAAYAAAAPABQAAgABAAYAAAAQABQAAgABAAYAAAASABMAAgABAAYAAAD9/w8AAgACAAUAAAD9/xAAAgACAAYAAAD8/w8AAgAAAAUAAAD8/xAAAgAAAAYAAAD6/xQAAgAAAAUAAAD6/xUAAgAAAAYAAAD7/xQAAgACAAUAAAD7/xUAAgACAAYAAAD4/w4AAgACAAUAAAD4/w8AAgACAAYAAAD1/w4AAgAAAAUAAAD1/w8AAgAAAAYAAAD2/w4AAgABAAUAAAD2/w8AAgABAAYAAAD3/w4AAgABAAUAAAD3/w8AAgABAAYAAAD5/wsAAgACAAUAAAD5/wwAAgACAAYAAADx/xMAAgACAAUAAADx/xQAAgACAAYAAADt/xMAAgAAAAUAAADt/xQAAgAAAAYAAADu/xMAAgABAAUAAADu/xQAAgABAAYAAADv/xMAAgABAAUAAADv/xQAAgABAAYAAADw/xMAAgABAAUAAADw/xQAAgABAAYAAAANABUAAgADAAQAAAANABYAAgADAAQAAAANABcAAgADAAQAAAANABgAAgADAAQAAAARABUAAgAFAAQAAAARABYAAgAFAAQAAAARABcAAgAFAAQAAAARABgAAgAFAAQAAAATABQAAgAFAAQAAAATABUAAgAFAAQAAAATABYAAgAFAAQAAAATABcAAgAFAAQAAAAAABQAAgADAAQAAAAAABUAAgADAAQAAAAAABYAAgADAAQAAAAAABcAAgADAAQAAAACABUAAgADAAQAAAACABYAAgADAAQAAAACABcAAgADAAQAAAACABgAAgADAAQAAAAGABUAAgAFAAQAAAAGABYAAgAFAAQAAAAGABcAAgAFAAQAAAAGABgAAgAFAAQAAAADABgAAgAEAAQAAAADABcAAgAEAAQAAAADABYAAgAEAAQAAAADABUAAgAEAAQAAAAEABUAAgAEAAQAAAAEABYAAgAEAAQAAAAEABcAAgAEAAQAAAAFABcAAgAEAAQAAAAFABYAAgAEAAQAAAAFABUAAgAEAAQAAAAFABgAAgAEAAQAAAAEABgAAgAEAAQAAAABABQAAgAEAAQAAAABABUAAgAEAAQAAAABABYAAgAEAAQAAAABABcAAgAEAAQAAAAHABcAAgAEAAQAAAAIABcAAgAEAAQAAAAJABcAAgAEAAQAAAAKABcAAgAEAAQAAAALABcAAgAEAAQAAAAMABcAAgAEAAQAAAAMABYAAgAEAAQAAAAMABUAAgAEAAQAAAAMABQAAgAEAAQAAAALABQAAgAEAAQAAAAKABQAAgAEAAQAAAAJABQAAgAEAAQAAAAIABQAAgAEAAQAAAAHABQAAgAEAAQAAAAHABUAAgAEAAQAAAAHABYAAgAEAAQAAAAIABUAAgAEAAQAAAAJABUAAgAEAAQAAAAKABUAAgAEAAQAAAALABUAAgAEAAQAAAALABYAAgAEAAQAAAAKABYAAgAEAAQAAAAJABYAAgAEAAQAAAAIABYAAgAEAAQAAAAOABgAAgAEAAQAAAAPABgAAgAEAAQAAAAQABgAAgAEAAQAAAAQABcAAgAEAAQAAAAPABcAAgAEAAQAAAAOABcAAgAEAAQAAAAOABYAAgAEAAQAAAAOABUAAgAEAAQAAAAPABUAAgAEAAQAAAAQABUAAgAEAAQAAAAQABYAAgAEAAQAAAAPABYAAgAEAAQAAAASABcAAgAEAAQAAAASABYAAgAEAAQAAAASABUAAgAEAAQAAAASABQAAgAEAAQAAAAWABIAAgAEAAQAAAAWABMAAgAEAAQAAAAWABQAAgAEAAQAAAAWABUAAgAEAAQAAAAYABEAAgAFAAQAAAAYABIAAgAFAAQAAAAYABMAAgAFAAQAAAAYABQAAgAFAAQAAAAXABIAAgAFAAQAAAAXABMAAgAFAAQAAAAXABQAAgAFAAQAAAAXABUAAgAFAAQAAAAVABIAAgADAAQAAAAVABMAAgADAAQAAAAVABQAAgADAAQAAAAVABUAAgADAAQAAAD9/xEAAgAFAAQAAAD9/xIAAgAFAAQAAAD9/xMAAgAFAAQAAAD9/xQAAgAFAAQAAAD7/xYAAgAFAAQAAAD7/xcAAgAFAAQAAAD7/xgAAgAFAAQAAAD7/xkAAgAFAAQAAAD4/xAAAgAFAAQAAAD4/xEAAgAFAAQAAAD4/xIAAgAFAAQAAAD4/xMAAgAFAAQAAAD5/w0AAgAFAAQAAAD5/w4AAgAFAAQAAAD5/w8AAgAFAAQAAAD5/xAAAgAFAAQAAADx/xUAAgAFAAQAAADx/xYAAgAFAAQAAADx/xcAAgAFAAQAAADx/xgAAgAFAAQAAAD1/xAAAgADAAQAAAD1/xEAAgADAAQAAAD1/xIAAgADAAQAAAD1/xMAAgADAAQAAADt/xUAAgADAAQAAADt/xYAAgADAAQAAADt/xcAAgADAAQAAADt/xgAAgADAAQAAADu/xUAAgAEAAQAAADu/xYAAgAEAAQAAADu/xcAAgAEAAQAAADu/xgAAgAEAAQAAADv/xgAAgAEAAQAAADv/xcAAgAEAAQAAADv/xYAAgAEAAQAAADv/xUAAgAEAAQAAADw/xUAAgAEAAQAAADw/xYAAgAEAAQAAADw/xcAAgAEAAQAAADw/xgAAgAEAAQAAAD2/xAAAgAEAAQAAAD3/xAAAgAEAAQAAAD3/xEAAgAEAAQAAAD3/xIAAgAEAAQAAAD2/xIAAgAEAAQAAAD2/xMAAgAEAAQAAAD2/xEAAgAEAAQAAAD3/xMAAgAEAAQAAAD6/xYAAgADAAQAAAD6/xcAAgADAAQAAAD6/xgAAgADAAQAAAD6/xkAAgADAAQAAAD8/xEAAgADAAQAAAD8/xIAAgADAAQAAAD8/xMAAgADAAQAAAD8/xQAAgADAAQAAAD5/xEAAgAFAAQAAAD5/xIAAgAFAAQAAAD5/xMAAgAFAAQAAAD4/xQAAgAFAAQAAAD1/xQAAgADAAQAAAD3/xQAAgAEAAQAAAD2/xQAAgAEAAQAAAAFAAwAAgAHAAMAAQA=")
tile_set = SubResource("TileSet_r2sof")

[node name="Ground2" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAPAA4AAgAIAAQAAAAQAA4AAgAIAAQAAAADAA4AAgAIAAQAAAAEAA4AAgAIAAQAAAAFAA4AAgAIAAQAAAAIAAwAAgAHAAMAAAAJAAsAAgAFAAAAAAD//wwAAgAFAAAAAAAOAA4AAgAIAAQAAAAYAA0AAgAIAAEAAAAYAA4AAgAIAAIAAAASABAAAgAIAAEAAAAHABAAAgAIAAEAAAABABAAAgAFAAEAAAAMABAAAgAFAAEAAAAMAAsAAgAHAAMAAAANAAsAAgAHAAMAAAAOAAsAAgAHAAMAAAAPAAwAAgAHAAMAAAAQAAwAAgAHAAMAAAARAAwAAgAHAAMAAAASAAwAAgAHAAMAAAAPAAsAAgAIAAAAAAA=")
tile_set = SubResource("TileSet_r2sof")

[node name="GroundExtra" type="TileMapLayer" parent="."]

[node name="Bridges" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAWAA4AAgAHAAIAAAAXAA4AAgAIAAMAAAAVAA4AAgAGAAIAAAAYAA0AAgAIAAMAAAAUAA4AAgAFAAIAAAAUAA0AAgAFAAEAAAAUAAwAAgAFAAEAAAAZAAwAAgAIAAEAAAAZAAsAAgAIAAEAAAAZAAoAAgAIAAEAAAAVAAsAAgAFAAEAAAAVAAoAAgAFAAEAAAAWAAkAAgAHAAMAAAAXAAkAAgAHAAMAAAAYAAkAAgAHAAMAAAAVAAkAAgAFAAAAAAAZAAkAAgAIAAAAAAAZAA0AAgAIAAIAAAAUAAsAAgAFAAAAAAD//w0AAgAMAAUAAAD+/w0AAgAMAAUAAAD9/w0AAgAMAAUAAAD8/w0AAgAMAAUAAAD7/w0AAgAMAAUAAAD6/w0AAgAMAAUAAAD5/w0AAgAMAAUAAAD4/w0AAgAMAAUAAAD3/w0AAgAMAAUAAAD2/w0AAgAMAAUAAAD1/w0AAgAMAAUAAAD0/w0AAgAMAAUAAADz/w0AAgAMAAUAAADy/w4AAgAMAAYAAADz/w4AAgAMAAYAAAD0/w4AAgAMAAYAAAD1/w4AAgAMAAYAAAD2/w4AAgAMAAYAAAD3/w4AAgAMAAYAAAD4/w4AAgAMAAYAAAD5/w4AAgAMAAYAAAD6/w4AAgAMAAYAAAD7/w4AAgAMAAYAAAD8/w4AAgAMAAYAAAD9/w4AAgAMAAYAAAD+/w4AAgAMAAYAAAD//w4AAgAMAAYAAAAPABAAAgANAAUAAAAPABEAAgANAAYAAAAPABIAAgANAAYAAAAPABMAAgANAAYAAAAPABQAAgANAAYAAAAPABUAAgANAAYAAAAPABYAAgANAAYAAAAPABcAAgANAAYAAAAPABgAAgANAAYAAAAJAAwAAgAHAAMAAAD//xAAAgAFAAIAAAABABEAAgAFAAIAAAAMABEAAgAFAAIAAAAUABAAAgAIAAIAAAASABEAAgAIAAIAAAAHABEAAgAIAAIAAAASABAAAgAGAAIAAAAHABAAAgAGAAIAAAABABAAAgAHAAIAAAAMABAAAgAHAAIAAAAJABAAAgAGAAIAAAAKABAAAgAHAAIAAAACABEAAgAGAAIAAAADABEAAgAHAAIAAAAFABEAAgAGAAIAAAAGABEAAgAHAAIAAAANABEAAgAGAAIAAAAOABEAAgAHAAIAAAAQABEAAgAGAAIAAAARABEAAgAHAAIAAAAEABEAAgAIAAMAAAAIABAAAgAHAAIAAAALABAAAgAGAAIAAAATABAAAgAHAAIAAAAAABAAAgAGAAIAAADt/xEAAgAIAAMAAADu/xEAAgAIAAMAAADv/xEAAgAIAAMAAADw/xEAAgAIAAMAAADx/xEAAgAIAAMAAAAFAAwAAgANAAYAAAAFAAsAAgANAAYAAAAFAAoAAgANAAYAAAAFAAkAAgAMAAUAAADy/w0AAgAMAAUAAAA=")
tile_set = SubResource("TileSet_r2sof")

[node name="CharacterBody2D" parent="." instance=ExtResource("14_c7xwv")]
position = Vector2(252, 356)

[node name="Bridge Overlay" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAVAAsAAgAHAAMAAAD//w4AAgAMAAUAAAD+/w4AAgAMAAUAAAD9/w4AAgAMAAUAAAD8/w4AAgAMAAUAAAD7/w4AAgAMAAUAAAD6/w4AAgAMAAUAAAD5/w4AAgAMAAUAAAD4/w4AAgAMAAUAAAD3/w4AAgAMAAUAAAD2/w4AAgAMAAUAAAD1/w4AAgAMAAUAAAD0/w4AAgAMAAUAAADz/w4AAgAMAAUAAADy/w4AAgAMAAUAAAA=")
tile_set = SubResource("TileSet_r2sof")

[connection signal="finished" from="Ambience" to="." method="_on_ambience_finished"]
